fix(validation): Don't throw an exception on empty field content during record convertion
- Add soft conversion move for converting user record to quick marc record so invalid content could be validated using record specification

Closes: MODQM-438